--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,17 @@
 Package: shinyTinker
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
-Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+Title: Custom Input Controls for Shiny Applications
+Version: 0.1.0
+Authors@R: person("Daniel", "Farnand", role = c("aut", "cre"))
+Description: Additional controls for Shiny Applications, modifying and iterating on shinyWidgets.
+License: use_mit_license()
+URL: https://github.com/dfarnand/shinyTinker
+BugReports: https://github.com/dfarnand/shinyTinker/issues
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.0.0
+RoxygenNote: 7.3.3
+Imports:
+    shiny,
+    htmltools,
+    shinyWidgets
+Suggests:
+    testthat (>= 3.0.0)
